<resources>
    <string name="app_name">Milkwala</string>
    <string name="Clickhere"><u>Click Here</u></string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="SignInnow">Signin Now</string>
    <string name="donthaveanaccount">Don,t have an account? Please Signup</string>
    <string name="internetconnectionmessage">Check your Internet connection...</string>
    <string name="feedback">Network Problem</string>
    <string name="ok">ok</string>
    <string name="loadingPleasewait">Loading... Please wait.</string>
    <string name="emailempty">Please enter email.</string>
    <string name="passwordEmpty">Please enter password.</string>
    <string name="wrongusernamepassword">Wrong email/password.</string>
    <string name="pleaseentervalidemail">Please enter valid email.</string>
    <string name="Registernow">SignUp Now</string>
    <string name="alreadyregistered">Email already Existed...</string>
    <string name="usernameempty">Please enter Username.</string>
    <string name="phoneempty">Please enter mobile number.</string>
    <string name="haveanaccount">Already have an account? SignIn here.</string>
    <string name="RegistarationSucessful">Registered Sucessfully.</string>
    <string name="updateInfo">Update Info</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pin Code</string>
    <string name="SelectCountry"><b>INDIA</b></string>

    <string-array name="cities">
        <item> Chandigarh </item>
        <item> Mohali </item>
        <item> Panchkula</item>
        <item> Ambala</item>
        <item> Ropar</item>
    </string-array>

    <string-array name="states">
        <item>Punjab</item>
        <item>Haryana</item>
    </string-array>

</resources>
