<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="jas.cse.milkwala.views.activity.login.LoginActivity">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/splash_logo"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_alignParentBottom="true">
        <EditText
            android:padding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_width="match_parent"
            android:background="@drawable/design"
            android:layout_height="wrap_content"
            android:id="@+id/edittextemail"
            />

        <EditText
            android:padding="10dp"
            android:layout_marginTop="2dp"
            android:layout_below="@id/edittextemail"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/design"
            android:hint="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittextpassword"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/edittextpassword"
            android:weightSum="2"
            android:id="@+id/linearlayoutlogin"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/forgetpassword"
                android:textSize="14dp"
                android:id="@+id/textviewforgetpass"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textviewclickhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Clickhere"
                android:textSize="14dp"
                android:paddingLeft="40dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignInnow"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/linearlayoutlogin"
            android:background="@drawable/button_design"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:id="@+id/buttonSignin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSignin"
            android:text="@string/donthaveanaccount"
            android:id="@+id/textviewregister"
            android:textColor="#000000"
            android:textSize="14dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:padding="2dp"/>
    </RelativeLayout>

</RelativeLayout>
